fixed alignment to match accounting

--- a/css/ccap-business-ethics.css
+++ b/css/ccap-business-ethics.css
@@ -3175,11 +3175,11 @@ img {
 }
 .chapter .glossary dl {
   display: inline;
+  padding-left: 20.28px;
 }
 .chapter .glossary dl dt {
   font-size: 12px;
   line-height: 1.6em;
-  margin-left: -6.5px;
 }
 .chapter .glossary dl dt::after {
   content: " ";
@@ -3187,7 +3187,6 @@ img {
 .chapter .glossary dl dd {
   font-size: 12px;
   line-height: 1.6em;
-  padding-left: 27px;
   text-indent: -27px;
   margin: 0;
 }
